--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,10 @@
           </li>
         </div>
       </ul>
+      <p appBasicHighlight>
+        Style me with Basic Directive!!!
+      </p>
+      <!-- Angular's <ng-template> element defines a template that is not rendered by default. -->
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
