using Renderer2 to safely access Dom elements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
       <p appBasicHighlight>
         Style me with Basic Directive!!!
       </p>
+      <p appBetterHighlight>
+        Style me with Better Directive!!!
+      </p>
       <!-- Angular's <ng-template> element defines a template that is not rendered by default. -->
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
