To provide interactivity to html element using directive and learnt HostListener directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,9 @@
       <p appBetterHighlight>
         Style me with Better Directive!!!
       </p>
+      <p appReactiveDirective>
+        Style me with Better Directive!!!
+      </p>
       <!-- Angular's <ng-template> element defines a template that is not rendered by default. -->
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
