--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
       <p appBetterHighlight>
         Style me with Better Directive!!!
       </p>
-      <p appReactiveDirective>
+      <p appReactiveDirective [defaultColor]="'transparent'" [highlightColor]="'orange'">
         Style me with Better Directive!!!
       </p>
       <!-- Angular's <ng-template> element defines a template that is not rendered by default. -->
